feat: initialize shared types and UI package structure
- Created initial index files for shared TypeScript types and UI components.
- Added Vite configuration for the UI package, including library build settings and alias resolution.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
+    "dev": "echo 'API functions will be deployed to Vercel. Use pnpm vercel:dev to test locally.'",
     "build": "tsc",
     "test": "vitest",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "vercel:dev": "vercel dev --yes"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0"
